Added an example to the docs

--- a/build.xml
+++ b/build.xml
@@ -48,6 +48,7 @@
 			<sp path-element="src"/>
 			<doc-sources path-element="src" />
 			<library-path dir="lib" includes="*" />
+			<examples-path>assets</examples-path>
 		</asdoc>
 	</target>
 </project>
